# snapture-quickdata-mcp

./: .env.example  .gitignore  .mcp.json.sample  AGENTS.md  CLAUDE.md  DOCKER_MCP.md  Dockerfile  README-ORIGINAL.md  README.md  build-mcp-docker.sh  docker-compose.yml  entrypoint.sh  pyproject.toml
.claude/commands/: exe-parallel.md  init-parallel.md  prime.md
.github/workflows/: publish-mcp-docker.yml
.rulesync/rules/: CLAUDE.md
ai_docs/: claude_opus_mcp_breakdown.md  uv_running_python.md
data/: README.md  diarias.tsv
specs/: custom_analytic_code.md  poc_init_generic.md  resource_workaround.md
src/mcp_server/: __init__.py  server.py  utils.py
src/mcp_server/advanced/: __init__.py  advanced_code_executor.py
src/mcp_server/config/: settings.py
src/mcp_server/managers/: __init__.py  enhanced_dataset_manager.py
src/mcp_server/models/: schemas.py
src/mcp_server/prompts/: __init__.py  (+10 more)
tests/: conftest.py  run_tests.py  test_advanced_code_executor.py  test_analytics_orchestrator.py  test_analytics_prompts.py  test_analytics_tools.py  test_custom_analytics_code.py  test_data_resources.py  test_enhanced_dataset_manager.py  test_pandas_tools.py  test_resource_mirror_tools.py
tests/advanced/: __init__.py
tests/integration/: __init__.py  test_complete_platform.py  test_final_validation.py
tests/prompts/: __init__.py  test_dataset_first_look_prompt.py  test_find_datasources_prompt.py  test_list_mcp_assets_prompt.py
tests/resources/: __init__.py  test_get_server_config_resource.py
tests/tools/: __init__.py  test_load_dataset_tool.py
(+34 files in other folders)
