[project]
name = "snapture-quickdata-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.2.14",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "psutil>=5.9.0",
    "uvicorn>=0.20.0",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.0.0",
    "pyarrow>=16.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
